:bento: Add og image

--- a/src/template.html
+++ b/src/template.html
@@ -16,7 +16,7 @@
     Black Foundry" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://wthr.live/" />
-    <meta property="og:image" content="https://dummyimage.com/600x400/000000/ffffff.jpg&text=black+foundry+weather+app" />
+    <meta property="og:image" content="https://bf-weather-app.netlify.com/social-media-preview.jpg" />
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-capable" content="yes">
