:art: Fix minor issues

--- a/src/template.html
+++ b/src/template.html
@@ -10,10 +10,9 @@
       gtag('config', 'UA-99072020-2');
     </script>
 		<meta charset="utf-8">
-		<title>Black Foundry weather app</title>
-    <meta property="og:title" content="Black Foundry weather app" />
-    <meta property="og:description" content="Here you can check local weather and buy Grtsk variable font by
-    Black Foundry" />
+		<title>Live Weather Forecasts by Black[Foundry]</title>
+    <meta property="og:title" content="Live Weather Forecasts by Black[Foundry]" />
+    <meta property="og:description" content="Here you can check local weather dressed up with Grtsk variable font by Black Foundry" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://wthr.live/" />
     <meta property="og:image" content="https://bf-weather-app.netlify.com/assets/social-media-preview.jpg" />
